--- a/index.html
+++ b/index.html
@@ -1,77 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Article preview component</title>
 
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <!-- main CSS file -->
   <link rel="stylesheet" href="css/style.css">
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  
-  
 </head>
+
 <body>
-  <div class="container">
-    
+  <div class="container d-flex align-items-center justify-content-center">
+    <div class="card overflow-hidden border-0">
+      <div class="row g-0">
+        <div class="col image overflow-hidden">
+          <img src="images/drawers.jpg" class="rounded-start">
+        </div>
+        <div class="col">
+          <div class="card-body">
+            <h5 class="card-title fw-bold">
+              Shift the overall look and feel by adding these wonderful
+              touches to furniture in your home
+            </h5>
+            <p class="card-text text-black-50">
+              Ever been in a room and felt like something was missing? Perhaps
+              it felt slightly bare and uninviting. I’ve got some simple tips
+              to help you make any room feel complete.
+            </p>
+
+            <div class='info d-flex justify-content-between mt-4'>
+              <div class="avatar d-flex">
+                <img src="images/avatar-michelle.jpg" class="rounded-circle me-3">
+                <div class="text">
+                  <p class="mb-0">Michelle Appleton</p>
+                  <p class="mb-0 text-black-50">28 Jun 2020</p>
+                </div>
+              </div>
+
+              <div class="share">
+                <img src="images/icon-share.svg" alt="">
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  
-  
 
 
 
 
 
 
-  <script src="js/app.js"></script>
+
+
   <!-- Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+  <!-- main JS file -->
+  <script src="js/app.js"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- 
-
-Shift the overall look and feel by adding these wonderful 
-touches to furniture in your home
-
-Ever been in a room and felt like something was missing? Perhaps 
-it felt slightly bare and uninviting. I’ve got some simple tips 
-to help you make any room feel complete.
-
-Michelle Appleton
-28 Jun 2020
-
-Share
-
- -->
