add tooltip to the share button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <div class="container d-flex align-items-center justify-content-center">
-    <div class="card overflow-hidden border-0">
+    <div class="card border-0">
       <div class="row g-0">
         <div class="col image overflow-hidden">
           <img src="images/drawers.jpg" class="rounded-start">
@@ -37,7 +37,7 @@
               to help you make any room feel complete.
             </p>
 
-            <div class='info d-flex justify-content-between mt-4'>
+            <div class='info d-flex justify-content-between align-items-center mt-4'>
               <div class="avatar d-flex">
                 <img src="images/avatar-michelle.jpg" class="rounded-circle me-3">
                 <div class="text">
@@ -48,6 +48,13 @@
 
               <div class="share">
                 <img src="images/icon-share.svg" alt="">
+
+                <div class="shareit p-3">
+                  <span class="text-white-50">share</span>
+                  <img src="images/icon-facebook.svg" alt="">
+                  <img src="images/icon-twitter.svg" alt="">
+                  <img src="images/icon-pinterest.svg" alt="">
+                </div>
               </div>
 
             </div>
