make page responsive

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
   <div class="container d-flex align-items-center justify-content-center">
     <div class="card border-0">
-      <div class="row g-0">
+      <div class="row g-0 flex-column flex-md-row">
         <div class="col image overflow-hidden">
-          <img src="images/drawers.jpg" class="rounded-start">
+          <img src="images/drawers.jpg">
         </div>
         <div class="col">
           <div class="card-body">
