--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 </head>
 
 <body>
-  <div class="container d-flex align-items-center justify-content-center">
+  <main class="container d-flex align-items-center justify-content-center">
     <div class="card border-0">
       <div class="row g-0 flex-column flex-md-row">
         <div class="col image overflow-hidden">
-          <img src="images/drawers.jpg">
+          <img src="images/drawers.jpg" alt="drawers">
         </div>
         <div class="col">
           <div class="card-body">
-            <h5 class="card-title fw-bold">
+            <h1 class="card-title fw-bold fs-5">
               Shift the overall look and feel by adding these wonderful
               touches to furniture in your home
-            </h5>
+            </h1>
             <p class="card-text text-black-50">
               Ever been in a room and felt like something was missing? Perhaps
               it felt slightly bare and uninviting. I’ve got some simple tips
@@ -39,7 +39,7 @@
 
             <div class='info d-flex justify-content-between align-items-center mt-4'>
               <div class="avatar d-flex">
-                <img src="images/avatar-michelle.jpg" class="rounded-circle me-3">
+                <img src="images/avatar-michelle.jpg" class="rounded-circle me-3" alt="avatar">
                 <div class="text">
                   <p class="mb-0">Michelle Appleton</p>
                   <p class="mb-0 text-black-50">28 Jun 2020</p>
@@ -47,13 +47,13 @@
               </div>
 
               <div class="share">
-                <img src="images/icon-share.svg" alt="">
+                <img src="images/icon-share.svg" alt="share">
 
                 <div class="shareit p-3">
                   <span class="text-white-50">share</span>
-                  <img src="images/icon-facebook.svg" alt="">
-                  <img src="images/icon-twitter.svg" alt="">
-                  <img src="images/icon-pinterest.svg" alt="">
+                  <img src="images/icon-facebook.svg" alt="icon-facebook">
+                  <img src="images/icon-twitter.svg" alt="icon-twitter">
+                  <img src="images/icon-pinterest.svg" alt="icon-pinterest">
                 </div>
               </div>
 
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 
 
 
